2018-12-27  Jim Wilson  <jimw@sifive.com>

	* run-readelf-mixed-corenote.sh: Update with new riscv64 output.

2018-12-02  Mark Wielaard  <mark@klomp.org>

	* testfile_gnu_props.32le.o.bz2: New testfile.
	* testfile_gnu_props.64le.o.bz2: Likewise.
	* testfile_gnu_props.32be.o.bz2: Likewise.
	* testfile_gnu_props.64be.o.bz2: Likewise.
	* Makefile (EXTRA_DIST): Add new testfiles.
	* run-readelf-n.sh: Run tests on new testfiles.

2018-11-28  Mark Wielaard  <mark@klomp.org>

	* backtrace-data.c (main): Improve error message.
	* run-backtrace-data.sh: Skip exit 77 return.

2018-11-21  Mark Wielaard  <mark@klomp.org>

	* backtrace-subr.sh (check_unsupported): Call test_cleanup before
	exit.

2018-11-17  Mark Wielaard  <mark@klomp.org>

	* run-strip-version.sh: New test.
	* testfile-version.bz2: New test file.
	* Makefile.am (TESTS): Add run-strip-version.sh.
	(EXTRA_DIST): Add run-strip-version.sh and testfile-version.bz2.

2018-11-09  Mark Wielaard  <mark@klomp.org>

	* run-strip-reloc.sh: Also test testfile-debug-rel-ppc64-z.o
	testfile-debug-rel-ppc64-g.o.

2018-11-12  Mark Wielaard  <mark@klomp.org>

	* run-readelf-n.sh: Add testfile-annobingroup.o test.

2018-11-11  Mark Wielaard  <mark@klomp.org>

	* run-readelf-n.sh: Fix NT_GNU_ABI_TAG type. Add testfile11 test
	for NT_VERSION.

2018-11-04  Mark Wielaard  <mark@klomp.org>

	* testfile-bpf-reloc.expect.bz2: Update with new expected jump
	variants.

2018-10-20  Mark Wielaard  <mark@klomp.org>

	* run-readelf-compressed.sh: New test.
	* Makefile.am (TESTS): Add run-readelf-compressed.sh.
	(EXTRA_DIST): Likewise.

2018-11-09  Mark Wielaard  <mark@klomp.org>

	* testfile-debug-rel-ppc64-g.o.bz2: New test file.
	* testfile-debug-rel-ppc64-z.o.bz2: Likewise.
	* testfile-debug-rel-ppc64.o.bz2: Likewise.
	* Makefile.am (EXTRA_DIST): Add testfile-debug-rel-ppc64-g.o.bz2,
	testfile-debug-rel-ppc64-z.o.bz2 and testfile-debug-rel-ppc64.o.bz2.
	* run-strip-reloc.sh: Also test on testfile-debug-rel-ppc64.o.